Update config
