# ecommerce-nodejs-api/src/routes/customer.route.js
@@ -2,7 +2,7 @@ const CustomerController = require('../controllers/customer.controller');
 
 const customer = (app) => {
     app.get(`/api/customers`, CustomerController.get);
-    app.get(`/api/customers/1`, CustomerController.findOne);
+    app.get(`/api/customers/:id`, CustomerController.findOne);
     app.delete(`/api/customers/1/delete`, CustomerController.remove);
     app.put(`/api/customers/1/update`, CustomerController.update);
     app.patch(`/api/customers/1/delete`, CustomerController.deactivate);
