# ecommerce-nodejs-api/swagger.json
@@ -31,6 +31,31 @@
           }
         }
       }
+    },
+    "/api/customers/{id}": {
+      "get": {
+        "tags": ["Customers"],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": "true",
+            "schema": {
+              "type": "integer",
+              "example": "123"
+            }
+          }
+        ],
+        "summary": "Get all customers in system",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "$ref": "#/definitions/Customers"
+            }
+          }
+        }
+      }
     }
   },
   "definitions": {
